Update code gia pha

--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
         "phpmailer/phpmailer": "^6.0",
         "mailgun/mailgun-php": "^2.3",
         "php-http/guzzle6-adapter": "^1.1",
-        "php-http/message": "^1.6"
+        "php-http/message": "^1.6",
+        "twig/extensions": "^1.5"
     }
 }
