--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "php-http/guzzle6-adapter": "^1.1",
         "php-http/message": "^1.4",
         "facebook/graph-sdk": "^5.6",
-        "league/fractal": "^0.17.0"
+        "league/fractal": "^0.17.0",
+        "twig/extensions": "^1.5"
     },
     "autoload": {
         "psr-4": {
